--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="margin_large">20dp</dimen>
     <dimen name="small_margin">12dp</dimen>
+    <dimen name="offset_huge">40dp</dimen>
+    <dimen name="offset_large">32dp</dimen>
 </resources>
