--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPicsum"
+        android:id="@+id/rvArtworks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
